<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_enrollment_form"
        android:textColor="#000"
        android:id="@+id/title"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/editText_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unique_id"
        android:textAlignment="center"
        android:inputType="number"

        android:maxLines="1"
        android:paddingTop="20dp"
        android:layout_below="@id/title" />


    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:hint="@string/name"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:layout_below="@id/editText_id"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/editText_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/discipline"
        android:inputType="text"
        android:maxLines="1"
        android:textAlignment="center"
        android:layout_below="@id/editText_name" />

    <EditText
        android:id="@+id/editText_Marks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:maxLines="1"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
       android:layout_below="@id/editText_surname" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_update"
        android:layout_alignEnd="@+id/button_update"
        android:layout_marginBottom="25dp"
        android:text="@string/add_data" />

    <Button
        android:id="@+id/button_viewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_add"
        android:layout_alignBottom="@+id/button_add"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="55dp"
        android:text="@string/view_all" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="42dp"
        android:layout_marginStart="64dp"
        android:text="@string/update" />


    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBaseline="@+id/button_update"
        android:layout_alignBottom="@+id/button_update"
        android:layout_alignStart="@+id/button_viewAll"
        android:text="@string/delete" />





</RelativeLayout>